--- a/VRChat/75/971575.html
+++ b/VRChat/75/971575.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "HDEOVk9SYQKF0KFtFQP67FlaOaL0NoPHfK1fFYGP1zo="></script>
+    "1O3C4Dfz4tweVHLPefMjSlR1P9M61Pf+5paignLH/0E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おためしめがね３てんせっと","description":"VRChatでの利用を想定した、簡素なデザインのメガネ3点セットです。\n\nVRChatでもっともっとメガネが流行って欲しいという気持ちで配布させていただきます。\n\nシェイプキーが入っているので、顔のサイズに合わせてある程度の調整ができるかもしれません。\n\n\n■利用上の注意\nモデルに組み込んでの利用→商用、非商用を問わず自由に改変、使用、再配布可\n単体での改変、再配布→不可\n\n使用したSSをSNS等に上げると作者が喜びます\n\n■使用方法や仕様\n・ポリゴン数\n　アンダーリム→580\n　リムレス1→628\n　リムレス2→774\n\nfbxファイルなので、そのままUnityにぶちこんでHeadアーマチュアの下に入れれば使うことが出来るかと思います。\n\nUnity上でマテリアルを編集することで色を変えることができます。\n\nシェイプキー3種類が設定されており、それぞれ\nブリッジの幅\nレンズの幅\nメガネ全体の傾き\nを調整することが出来ます。\nヒエラルキーからメガネのメッシュの部分を選択することで編集が可能です。\n\n\n何かご不明な点や不具合などありましたらお気軽に作者ツイッター(@popico_VT)までご連絡ください。","url":"https://booth.pm/ja/items/971575","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/13e72562-5481-4676-9ce5-6a97e2f60d62/i/971575/7c09a10b-4d0c-4803-b958-83224d1dbaad_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HDEOVk9SYQKF0KFtFQP67FlaOaL0NoPHfK1fFYGP1zo="></script>
+    nonce="1O3C4Dfz4tweVHLPefMjSlR1P9M61Pf+5paignLH/0E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -397,9 +397,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
