--- a/VRChat/09/969809.html
+++ b/VRChat/09/969809.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "JUmj4y2UmQ+hNHmvbjGyMx3au5fHQer+UzbZBnTIbMI="></script>
+    "w9l8jn2w2VyAdG52zKhx192SChr9DHnbGJ5rtnWyQ4k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VIVEBatteryInfo Ver. 0.2.0.14","description":"※直近の最新版は、βテストも兼ね、FANBOXにて先行リリースしています。\nhttps://www.pixiv.net/fanbox/creator/1400148\n\n本ページにてBoost購入いただいた方へ最新版のキーをお送りしているので、購入ページよりお問い合わせください。\n\n※最新版で動作が不安定・起動しない方は、旧バージョンをご利用ください。\n\nSteamVRダッシュボードのタブに「BattInfo」を追加するアプリです。\nVIVEコントローラとトラッカーのバッテリー状態を表示できます。\nまた、現在時刻とCPU使用率も表示できます。\n腕時計のように左手の甲に表示させておくことも出来ます。\n\nその他さまざまな付加機能があります。\n\nfor English:\nApplication can use english and any languages.\nyou can download to \"無料ダウンロード\" button.\nLicense are \"CC BY-NC-SA 4.0\". thank you!","url":"https://booth.pm/ja/items/969809","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/cc94a38f-816e-407f-86e5-13bc78cd95c6/i/969809/305b8ffb-1d46-4cbc-a004-a5a3fe61fdcf_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JUmj4y2UmQ+hNHmvbjGyMx3au5fHQer+UzbZBnTIbMI="></script>
+    nonce="w9l8jn2w2VyAdG52zKhx192SChr9DHnbGJ5rtnWyQ4k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -950,9 +950,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
