--- a/VRChat/21/958921.html
+++ b/VRChat/21/958921.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "bdrlUXMfog/jnConxwYATTNRHtNUOi6/8HJuqOuISUQ="></script>
+    "Cre8tyY8Jnth8HrW3S644uf9KKAtCKWfoxuiiiTKHVA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"へなちょこ魔法使いカルミア","description":"【へなちょこ魔法使いカルミアモデル紹介】\n\nこのモデルはVRアバター向けモデルとなります。\nフルトラッキングは未対応です。\n本モデルはCubeds Unity Shadersを使用しております。\nCubeds Unity Shaders\nhttps://github.com/cubedparadox/Cubeds-Unity-Shaders\n\nポリゴン数：8504\nテクスチャ数：4（エミッション用テクスチャ2枚）\nマテリアル数：5\n\n【内容】\n・3Dモデル（FBX、テクスチャ）\nシェイプキーは真顔、笑顔、へなちょこ顔、半目、ビックリ、瞬き、ニヤケ顔の7種類。\nリップシンクはあ、い、う、え、お、口閉じの6種類が入っています。\n\n・UnityPackage\nHumanoid設定済みモデルとSceneが入っていますがShaderが同封されていないので各自でShaderを設定してください。\n顔のマテリアルのShadowは0にしないと変な影が出ます。\n\n・UVマップ\n肌を青肌にする等の改変を行う際に使用してください。\n\n【利用規約】\n・本モデルは営利、非営利問わずVRChat又はそれ以外のコンテンツに使用することを許諾します。\n・3Dモデル、テクスチャの著作権は増田弾正に帰属します。\n・3Dモデル等を改変し使用することを許諾します。\n・3Dモデル、テクスチャを営利、非営利問わず許可無く再配布することを禁止します。（VRChatでのアバターワールドに配置等も含む）\n・3Dモデルをヘイトスピーチや他者への嫌がらせ等での使用を禁止します。\n・3Dモデルを使用したことにより発生したトラブル、損失等の責任は一切負いません。\n","url":"https://booth.pm/ja/items/958921","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/caf3bb4c-ffdb-4c61-b7f6-afae273c5993/i/958921/93f6a98d-be09-4c16-a89c-4180419d6c95_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bdrlUXMfog/jnConxwYATTNRHtNUOi6/8HJuqOuISUQ="></script>
+    nonce="Cre8tyY8Jnth8HrW3S644uf9KKAtCKWfoxuiiiTKHVA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -398,9 +398,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
