--- a/VRChat/57/967757.html
+++ b/VRChat/57/967757.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "G3CZpYkPHbjB3MX6gNFW7EpeH5TV0dOZ/skaoFnonwo="></script>
+    "oQGg6pY1rJ5mcapgOBtQfgban+q/DU95n3fJTmpYk3E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"時計","description":"時計です\n内容\n　unitypackage\n　\nモデル詳細\n　ポリゴン数1792\n　マテリアル１\n　テクスチャ１\n\n商用利用ok\n再配布禁止\n\n02/10修正箇所\n・テクスチャ書き直し\n・マテリアル1つに統合\n・Post-ProcessingProfile　追加\n\n","url":"https://booth.pm/ja/items/967757","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e0415562-fcb7-4594-a7f1-147b54a5ca15/i/967757/6a9d8c0f-ef82-4d17-a745-f2d4bc8f50cf_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="G3CZpYkPHbjB3MX6gNFW7EpeH5TV0dOZ/skaoFnonwo="></script>
+    nonce="oQGg6pY1rJ5mcapgOBtQfgban+q/DU95n3fJTmpYk3E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -369,9 +369,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
