--- a/VRChat/23/967423.html
+++ b/VRChat/23/967423.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "NWFs73HoaJi9Lcy0/QKUlW5fa6MWNQem5Y1wV9Cpj4I="></script>
+    "fch51w7nHuR6kCezorg/RE3HbPxN9NNzP2drU13dlco="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Saikin Hutotta(Rebound)","description":"8/26　バグが潰せず無念のダウングレード（足や腕などの長さを弄る機能が現状正常に動作しないのでオフに）\n8/21　Rebound版にアップデート\n\nUnityでHumanoid対応モデルに追加する事で体型をスライダーで変更する事ができます。\nVRchatにアップロードする際は本コンポーネントを削除してください。（スクリプトは弾かれるため）\n詳しい使用法は同梱されたヘルプファイルを参照してください。\n\n\n・sentz-Aデータ利用規約（2018/08/26）\n本データを利用した場合、利用者は本規約に同意したものとみなされます。\n本データの利用により発生した損害、損失等について著作者は一切の責任を負わないものとします。\n1.著作者の特別の許可がない限り、不特定多数が現状のまま利用可能な状態での再配布を禁じます。","url":"https://booth.pm/ja/items/967423","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/e187f0d4-84c9-40b6-8fed-dae784ce6815/i/967423/6942f9c5-b6de-402f-b417-10d9f4eff9a7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NWFs73HoaJi9Lcy0/QKUlW5fa6MWNQem5Y1wV9Cpj4I="></script>
+    nonce="fch51w7nHuR6kCezorg/RE3HbPxN9NNzP2drU13dlco="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -394,9 +394,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
