--- a/VRChat/06/966006.html
+++ b/VRChat/06/966006.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "E7nIxg+Qs0xC0rO3G3ACTnkfgVN3RJNxLpIdXvN5j9k="></script>
+    "GO1iXgLYBisNRSLy7oHMFsGzVLsiJTYynAvcDnz1nZo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"カウンターチェア △1245 fbx うにぱけ","description":"「あー、その椅子は使えるんだけど」\n「借金のカタに置いてかれてそのままなんだよね…」\n「重いし場所とるから持ってってくんない？」\n　\n　メーカー不明、デザイナーズ風の回転椅子\n　持ち歩けないし置いておくにも微妙にポリゴン数が多い\n　改変、再配布等は有償無償を問わず自由だそうだ\n　重いってそういう意味だったんだね…","url":"https://booth.pm/ja/items/966006","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b76a1910-879f-4c22-9091-2a1f79ac5ce9/i/966006/3e3a4f5a-087d-4d81-bcee-dc6f9dfd1b2d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="E7nIxg+Qs0xC0rO3G3ACTnkfgVN3RJNxLpIdXvN5j9k="></script>
+    nonce="GO1iXgLYBisNRSLy7oHMFsGzVLsiJTYynAvcDnz1nZo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -375,9 +375,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
