--- a/VRChat/57/965757.html
+++ b/VRChat/57/965757.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "QvmbJwv3PCUSvD+9hS0R7ItLEULl1WxXhJCs95ljSPs="></script>
+    "0HoMtuXvazI18NXm3OyE9reMrlr2zNLk6IsXpPl3KRs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"猫帽子","description":"まばたきアニメーションが付いている\n\n3Dモデル『猫帽子』\n\n製作・配布：　NEG-13　(@NEG__13)\n\n\n◆内容物\n　本体　…　FBXファイル。テクスチャ\n\n\n\n【利用について】\n当モデルの使用で起こる問題は自己責任でお願い致します。ご了承ください。\n\n◆改変について\n　自由です。\n◆二次配布\n　禁止です。\n◆商用利用\n　OKです。\n◆VRChat意外での使用\n　OKです。\n◆性的コンテンツでの使用\n　OKです。","url":"https://booth.pm/ja/items/965757","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/4624dd9e-01a3-4b61-be33-4d2e9ede3984/i/965757/eec30ec0-f533-4c5e-a3ec-d9f805d5b195_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QvmbJwv3PCUSvD+9hS0R7ItLEULl1WxXhJCs95ljSPs="></script>
+    nonce="0HoMtuXvazI18NXm3OyE9reMrlr2zNLk6IsXpPl3KRs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -374,9 +374,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
